<resources>
    <string name="app_name">My Notes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ACCESSIBILITY -->
    <string name="add_note_button_description">Add note button</string>
    <string name="clear_notes_button_description">Button that deletes all notes</string>

    <string name="note_title_hint">Write your title here...</string>
    <string name="note_content_hint">Write your note here...</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="notes_cleared_message">All notes have been deleted</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_button_text">Delete</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete all notes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>